--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
